<resources>
    <string name="app_name">pickup</string>
    <string name="title_activity">Pickup</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_forget_password">Forgot Password</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_password">Please enter a password</string>
    <string name="invalid_display_name">Display name must be 2 to 30 characters and can only contain letters and separators</string>
    <string name="invalid_register_password">Please enter a password that is 6 characters or longer</string>
    <string name="invalid_confirm_password">Passwords do not match</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Registration failed</string>
    <string name="update_desc_failed">Description update failed</string>
    <string name="update_name_failed">Profile name update failed</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_create">Create Games</string>
    <string name="title_search_games">Search Games</string>
    <string name="search_failed">Search Games Failed</string>
    <string name="title_profile">My Profile</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="recover_password_title">Send Email Confirmation</string>
    <string name="action_send">Send</string>
    <string name="title_create_game">Create a Game</string>
    <string name="action_submit">Submit</string>
    <string name="action_clear">Clear</string>
    <string name="hint_game_title">Game Title</string>
    <string name="hint_sport">Sport</string>
    <string name="hint_no_players">Total Players</string>
    <string name="hint_location">Location</string>
    <string name="hint_date">Date</string>
    <string name="hint_start_time">Starts At</string>
    <string name="hint_end_time">Ends At</string>
    <string name="title_current_games">Current Games</string>
    <string name="label_logo_login">Banner</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="cancel">Cancel</string>
    <string name="remember_me">Remember Me</string>
    <string name="logout">Logout</string>
    <string name="filter">Filter</string>
    <string name="fingerprint_auth_unavailable_hardware">Fingerprint Authentication Unavailable. No fingerprints available.</string>
    <string name="fingerprint_auth_unavailable_user">Fingerprint Authentication Unavailable. No user information saved.</string>
    <string name="filter_title">Filter</string>
    <string name="do_not_show_full">Do not show full games</string>
    <string name="do_not_show_ongoing">Do not show ongoing games</string>
    <string name="max_distance">Maximum Distance</string>
    <string name="starts_in">Starts In</string>
    <string name="add_game_btn">Add Game Button</string>
    <string-array name="placeholder_sports">
        <item>Tennis</item>
        <item>Soccer</item>
        <item>Football</item>
    </string-array>
    <string name="invalid_description">Profile description must be 1 to 280 characters long</string>
    <string name="get_sports_failed">Failed to get the list of supported sports</string>
    <string name="get_settings_failed">Failed to get user settings</string>
    <string name="update_profile_pic_failed">Failed to update profile picture</string>
    <string name="get_weather_failed">Failed to get weather</string>
    <string name="default_players">10</string>
    <string name="game_description">Description</string>
    <string name="select_a_location">Tap to select a location…</string>
    <string name="invalid_game_title">Game titles must be 1 to 140 characters</string>
    <string name="invalid_game_sport">Select a sport</string>
    <string name="invalid_game_players">Games must have 2 to 250 players</string>
    <string name="invalid_game_description">Description must be shorter than 280 characters</string>
    <string name="invalid_game_location">Select a game location</string>
    <string name="create_failed">Create Game Failed</string>
    <string name="current_games_failed">Failed to find your current games</string>
    <string name="placeholder_display_name">My Display Name</string>
    <string name="placeholder_profile_description">My Profile Description</string>
    <string name="edit_btn_desc">Profile description edit</string>
    <string name="location_button_description">Location Button</string>
    <string name="join_failed">Unable to Join Game</string>
    <string name="leave_failed">Unable to Leave Game</string>
    <string name="join_success">Joined Game!</string>
    <string name="leave_success">Left the Game!</string>
    <string name="leave_confirmation">Are you sure you want to leave this game?</string>
    <string name="weather">Weather:</string>
    <string name="temperature_f">Temperature (F)</string>
    <string name="humidity">Humidity (%)</string>
</resources>
