<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_entry_card"
        android:layout_width="78dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/result_location"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="81dp"
            android:text="@string/hint_location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/result_players"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="81dp"
            android:text="@string/hint_no_players"
            android:textSize="16sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="96dp"
            android:layout_height="60dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/ic_gymnast"
            app:civ_border_color="#FF000000"
            app:civ_border_width="0dp"
            tools:srcCompat="@drawable/ic_gymnast" />

        <TextView
            android:id="@+id/result_title"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="82dp"
            android:text="@string/hint_game_title"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/add_game_btn"
            android:layout_width="42dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="320dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_add_black_24dp"
            android:contentDescription="@string/add_game_btn" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>