<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/humidityDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/weatherDetailTextView"
        tools:visibility="visible">

        <TextView
            android:id="@+id/humidityDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/humidityDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/endsAtDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/dateDetailLayout">

        <TextView
            android:id="@+id/endsAtDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_end_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/endsAtDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tempDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherDetailTextView"
        tools:visibility="visible">

        <TextView
            android:id="@+id/temptDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature_f"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tempDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/startsAtDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateDetailLayout">

        <TextView
            android:id="@+id/startsAtDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_start_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/startsAtDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationDetailLayout">

        <TextView
            android:id="@+id/dateDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/locationDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/sportDetailLayout"
        app:layout_constraintTop_toBottomOf="@+id/descriptionDetailLayout">

        <TextView
            android:id="@+id/locationDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_location"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/locationDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/descriptionDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sportDetailLayout">

        <TextView
            android:id="@+id/descriptionDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_description"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descriptionDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/totalPlayersDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/sportDetailLayout">

        <TextView
            android:id="@+id/totalPlayersDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_no_players"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/totalPlayersDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent=".5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/sportDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/titleDetailTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleDetailTextView">

        <TextView
            android:id="@+id/sportDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_sport"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sportDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/titleDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weatherDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weather"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/startsAtDetailLayout"
        app:layout_constraintTop_toBottomOf="@+id/startsAtDetailLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>